add waiting list ui and regenerate openapi client
