# src/api/specialist-booking/models/AssignBestSlotResponse.ts
@@ -1,0 +1,101 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Specialist Booking API
+ * Specialist appointment booking management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * Contact: xdrga@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface AssignBestSlotResponse
+ */
+export interface AssignBestSlotResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof AssignBestSlotResponse
+     */
+    appointmentId: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof AssignBestSlotResponse
+     */
+    assigned: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof AssignBestSlotResponse
+     */
+    slotId?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof AssignBestSlotResponse
+     */
+    waitingList: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof AssignBestSlotResponse
+     */
+    message: string;
+}
+
+/**
+ * Check if a given object implements the AssignBestSlotResponse interface.
+ */
+export function instanceOfAssignBestSlotResponse(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "appointmentId" in value;
+    isInstance = isInstance && "assigned" in value;
+    isInstance = isInstance && "waitingList" in value;
+    isInstance = isInstance && "message" in value;
+
+    return isInstance;
+}
+
+export function AssignBestSlotResponseFromJSON(json: any): AssignBestSlotResponse {
+    return AssignBestSlotResponseFromJSONTyped(json, false);
+}
+
+export function AssignBestSlotResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): AssignBestSlotResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'appointmentId': json['appointmentId'],
+        'assigned': json['assigned'],
+        'slotId': !exists(json, 'slotId') ? undefined : json['slotId'],
+        'waitingList': json['waitingList'],
+        'message': json['message'],
+    };
+}
+
+export function AssignBestSlotResponseToJSON(value?: AssignBestSlotResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'appointmentId': value.appointmentId,
+        'assigned': value.assigned,
+        'slotId': value.slotId,
+        'waitingList': value.waitingList,
+        'message': value.message,
+    };
+}
+
