# src/api/specialist-booking/models/ErrorResponse.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Specialist Booking API
+ * Specialist appointment booking management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * Contact: xdrga@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ErrorResponse
+ */
+export interface ErrorResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof ErrorResponse
+     */
+    code: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ErrorResponse
+     */
+    message: string;
+}
+
+/**
+ * Check if a given object implements the ErrorResponse interface.
+ */
+export function instanceOfErrorResponse(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "code" in value;
+    isInstance = isInstance && "message" in value;
+
+    return isInstance;
+}
+
+export function ErrorResponseFromJSON(json: any): ErrorResponse {
+    return ErrorResponseFromJSONTyped(json, false);
+}
+
+export function ErrorResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ErrorResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'code': json['code'],
+        'message': json['message'],
+    };
+}
+
+export function ErrorResponseToJSON(value?: ErrorResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'code': value.code,
+        'message': value.message,
+    };
+}
+
