# src/api/specialist-booking/models/WaitingListEntry.ts
@@ -1,0 +1,93 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Specialist Booking API
+ * Specialist appointment booking management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * Contact: xdrga@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface WaitingListEntry
+ */
+export interface WaitingListEntry {
+    /**
+     * 
+     * @type {string}
+     * @memberof WaitingListEntry
+     */
+    appointmentId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof WaitingListEntry
+     */
+    patientName: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof WaitingListEntry
+     */
+    examinationType: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof WaitingListEntry
+     */
+    requestedAt: Date;
+}
+
+/**
+ * Check if a given object implements the WaitingListEntry interface.
+ */
+export function instanceOfWaitingListEntry(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "appointmentId" in value;
+    isInstance = isInstance && "patientName" in value;
+    isInstance = isInstance && "examinationType" in value;
+    isInstance = isInstance && "requestedAt" in value;
+
+    return isInstance;
+}
+
+export function WaitingListEntryFromJSON(json: any): WaitingListEntry {
+    return WaitingListEntryFromJSONTyped(json, false);
+}
+
+export function WaitingListEntryFromJSONTyped(json: any, ignoreDiscriminator: boolean): WaitingListEntry {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'appointmentId': json['appointmentId'],
+        'patientName': json['patientName'],
+        'examinationType': json['examinationType'],
+        'requestedAt': (new Date(json['requestedAt'])),
+    };
+}
+
+export function WaitingListEntryToJSON(value?: WaitingListEntry | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'appointmentId': value.appointmentId,
+        'patientName': value.patientName,
+        'examinationType': value.examinationType,
+        'requestedAt': (value.requestedAt.toISOString()),
+    };
+}
+
