# src/api/specialist-booking/models/index.ts
@@ -1,4 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export * from './Appointment';
+export * from './AssignBestSlotResponse';
+export * from './ErrorResponse';
 export * from './TimeSlot';
+export * from './WaitingListEntry';
